--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,16 @@
     width:100px;
     margin-top: 10px;
   }
+
+  .required{
+      color:red;
+  }
+
+  .pointer{
+      cursor: pointer;
+  }
+  .verticle {
+    border-left: 2px solid gray;
+    height: 100px;
+    padding-left:5px;
+  }
